2005-10-09  Piotr Fusik  <fox@scene.pl>
* atari_x11.c: removed "Help" menu item disabling, because "Help" was removed
  recently

* rdevice.c: improved Device_GetInetAddress:
  - all non-control ASCII characters except space allowed (dunno if correct)
  - memory wraps at 64K
  - prevented buffer overflow

* binload.c, devices.c: use fgetc() instead of fread() for single bytes;
  start_binloading is a boolean, and should be set to TRUE or FALSE

* devices.c, rt-config.[ch]: atari_h[1-4]dir -> atari_h_dir[0..3];
  hd_read_only -> h_read_only

* devices.[ch]: numerous improvements in H: device emulation:
  - slash, backslash, colon and greater-than are allowed H: directory
    separators on all platforms
  - parent directory on H: is "<" or ".."
  - access via H: outside the specified directories is not possible
    (I hope so!)
  - HPath -> h_exe_path, and is not modified in-place
  - fixed match(): "F?" matched "F", "FOO?BAR" matched "FOO.BAR"
  - apostrophe is valid in filenames
  - MyDOS compatible H: commands: 0x22 = mkdir, 0x29 = cd
  - H: rename command no longer allows moving files to a different directory
  - command 0x30 is "ToAbsolutePath" rather than "CurrentDirectory"
  - mkdir and rmdir no longer work in H: read-only mode
  - mkdir no longer calls umask(), and now creates directory with default
    permissions
  - H5: is no longer valid (but H6:-H9: default to the current directory)
  - apply fseek(fp, 0, SEEK_CUR) between reads and writes of a file open
    in "rb+" mode (e.g. DJGPP needs that)
  - H: directories prefixed with ':' in directory listing on MyDOS
  - base names longer than 8 characters and extensions longer than
    3 characters are truncated and terminated with '+' in directory listings
  - file size in long directory listing limited to 999999
  - long directory listing uses (SpartaDOS-compatible) 12-hour format

* ui_basic.c: silenced a warning

* win32/atari_win32.c: implemented Atari 5200 keys;