@@ -226,7 +226,6 @@ case "$a8_target" in
     ps2)
         AC_DEFINE(PS2,1,[Target: Sony PlayStation 2.])
         AC_DEFINE(DEFAULT_CFG_NAME,"mc0:/ATARI/ATARI800.CFG",[Alternate config filename due to 8+3 fs limit.])
-        A8_NEED_LIB(gcc)
         A8_NEED_LIB(kernel)
         A8_NEED_LIB(debug)
         A8_NEED_LIB(syscall)
@@ -235,7 +234,8 @@ case "$a8_target" in
         A8_NEED_LIB(pad)
         A8_NEED_LIB(kbd)
         A8_NEED_LIB(mc)
-        A8_NEED_LIB(g)
+        A8_NEED_LIB(z)
+	A8_NEED_LIB(g)
         A8_NEED_LIB(c)
         OBJS="atari_ps2.o ps2kbd.s usbd.s"
         ;;
